--- a/1_create_DDBB.Rmd
+++ b/1_create_DDBB.Rmd
@@ -27,8 +27,8 @@ source("Functions/reformate_date.R")
 
 
 
-directory <- paste0(getwd(), "/Prova")
-#directory <- getwd()
+#directory <- paste0(getwd(), "/Prova")
+directory <- getwd()
 
 ```
 
@@ -61,7 +61,7 @@ names(links_to_download) <- c("ID", "Titol_cat", "Enllac", "Nom_BBDD")
 
 ***CODI PER NO HAVER DE COMPILAR PER LES 22280 bbdd sinó per n***
 
-```{r subdataset, eval=TRUE, include=FALSE}
+```{r subdataset, eval=FALSE, include=FALSE}
 set.seed(1420)
 links_to_download <- links_to_download[sample(nrow(links_to_download), 300, replace = FALSE),]
 ```
